apps/rabbit-mq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-mq-ingress
  labels:
    app: rabbit-mq
  annotations:
    # konghq.com/host-aliases: "example.com,example.net"
    # konghq.com/methods: "GET,POST"
    # konghq.com/https-redirect-status-code: "301"
    # konghq.com/host-header: "test.example.com"
spec:
  ingressClassName: kong
  rules:
  - host: "rabbitmq.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-0
            port:
              number: 15672
